{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 30,
  "lineage": "35f911c2-0e8c-b794-e0e5-a8529bd89d85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dae90db1cddf01dd",
            "arn": "arn:aws:ec2:eu-west-2:127486921697:elastic-ip/eipalloc-0dae90db1cddf01dd",
            "association_id": "eipassoc-0b3b618f835a0c548",
            "domain": "vpc",
            "id": "eipalloc-0dae90db1cddf01dd",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-06f248bf5342a1e01",
            "private_dns": "ip-10-0-0-19.eu-west-2.compute.internal",
            "private_ip": "10.0.0.19",
            "public_dns": "ec2-18-135-250-84.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.250.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "portfoliod-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:internet-gateway/igw-02fbb6484d328f49a",
            "id": "igw-02fbb6484d328f49a",
            "owner_id": "127486921697",
            "tags": {
              "Name": "portfoliod-cluster-igw"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-igw"
            },
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dae90db1cddf01dd",
            "association_id": "eipassoc-0b3b618f835a0c548",
            "connectivity_type": "public",
            "id": "nat-062821db1168060c7",
            "network_interface_id": "eni-06f248bf5342a1e01",
            "private_ip": "10.0.0.19",
            "public_ip": "18.135.250.84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-019683d1d74abe639",
            "tags": {
              "Name": "portfoliod-cluster-nat"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:route-table/rtb-060d6996dd3c3a31a",
            "id": "rtb-060d6996dd3c3a31a",
            "owner_id": "127486921697",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062821db1168060c7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfoliod-cluster-private-rt"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:route-table/rtb-08c78556755b13f07",
            "id": "rtb-08c78556755b13f07",
            "owner_id": "127486921697",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fbb6484d328f49a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfoliod-cluster-public-rt"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099761fb568803b28",
            "route_table_id": "rtb-060d6996dd3c3a31a",
            "subnet_id": "subnet-05ad149b90961ba4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d4908ed7aa8d19b",
            "route_table_id": "rtb-060d6996dd3c3a31a",
            "subnet_id": "subnet-0cfe7acea238981be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220fa0cbfc14c1b5",
            "route_table_id": "rtb-08c78556755b13f07",
            "subnet_id": "subnet-019683d1d74abe639"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae5c55fdb184c430",
            "route_table_id": "rtb-08c78556755b13f07",
            "subnet_id": "subnet-02a4c7f3ef45b767f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:subnet/subnet-05ad149b90961ba4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ad149b90961ba4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127486921697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfoliod-cluster-private-0",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-private-0",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:subnet/subnet-0cfe7acea238981be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfe7acea238981be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127486921697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfoliod-cluster-private-1",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-private-1",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:subnet/subnet-019683d1d74abe639",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019683d1d74abe639",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127486921697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfoliod-cluster-public-0",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-public-0",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:subnet/subnet-02a4c7f3ef45b767f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a4c7f3ef45b767f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127486921697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfoliod-cluster-public-1",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-public-1",
              "kubernetes.io/cluster/portfoliod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aad5cf237cc566bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:127486921697:vpc/vpc-0aad5cf237cc566bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6be7fba233dc929",
            "default_route_table_id": "rtb-0ee3c8113b7ab6baf",
            "default_security_group_id": "sg-0a9621d54b6d26ad0",
            "dhcp_options_id": "dopt-3bebc653",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aad5cf237cc566bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee3c8113b7ab6baf",
            "owner_id": "127486921697",
            "tags": {
              "Name": "portfoliod-cluster-vpc"
            },
            "tags_all": {
              "Name": "portfoliod-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}